--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
     "@astrojs/solid-js": "^1.2.3",
-    "@astrojs/tailwind": "^2.1.2",
+    "@astrojs/tailwind": "^2.1.3",
     "@codemirror/lang-javascript": "^6.1.1",
+    "@codemirror/language": "^6.3.1",
     "@codemirror/state": "^6.1.4",
     "@codemirror/theme-one-dark": "^6.1.0",
-    "@codemirror/view": "^6.5.1",
-    "@solid-codemirror/codemirror": "^1.0.4",
-    "astro": "^1.6.10",
+    "@codemirror/view": "^6.6.0",
+    "@solid-primitives/refs": "^0.3.4",
     "codemirror": "^6.0.1",
-    "solid-js": "^1.4.3",
-    "tailwindcss": "^3.0.24"
+    "solid-js": "^1.6.2",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@iconify-json/fluent": "^1.1.17",
+    "astro": "^1.6.11",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-icons": "^0.14.14"
   }
