--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@codemirror/state": "^6.1.4",
     "@codemirror/theme-one-dark": "^6.1.0",
     "@codemirror/view": "^6.6.0",
+    "@ddietr/codemirror-themes": "^1.3.0",
     "@solid-primitives/refs": "^0.3.4",
+    "@uiw/codemirror-extensions-hyper-link": "^4.15.1",
     "codemirror": "^6.0.1",
+    "github-dark": "link:@ddietr/codemirror-themes/github-dark",
+    "github-light": "link:@ddietr/codemirror-themes/github-light",
     "solid-js": "^1.6.2",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@iconify-json/fluent": "^1.1.17",
     "astro": "^1.6.11",
+    "sass": "^1.56.1",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-icons": "^0.14.14"
   }
