--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ddietr/codemirror-themes": "^1.3.0",
     "@solid-primitives/refs": "^0.3.4",
     "@uiw/codemirror-extensions-hyper-link": "^4.15.1",
+    "clsx": "^1.2.1",
     "codemirror": "^6.0.1",
     "github-dark": "link:@ddietr/codemirror-themes/github-dark",
     "github-light": "link:@ddietr/codemirror-themes/github-light",
